--- a/yamls/kube-ovn.yaml
+++ b/yamls/kube-ovn.yaml
@@ -90,7 +90,7 @@ spec:
             - --enable-lb-svc=false
             - --keep-vm-ip=true
             - --pod-default-fip-type=
-            - --node-local-dns-cache-ip=
+            - --node-local-dns-ip=
           env:
             - name: ENABLE_SSL
               value: "false"
