--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -1725,27 +1725,24 @@ spec:
       - name: V4IP
         type: string
         jsonPath: .status.v4ip
-      - name: PV4IP
-        type: string
-        jsonPath: .spec.parentV4ip
       - name: Mac
         type: string
         jsonPath: .status.mac
-      - name: PMac
-        type: string
-        jsonPath: .spec.parentMac
       - name: V6IP
         type: string
         jsonPath: .status.v6ip
-      - name: PV6IP
+      - name: PMac
         type: string
-        jsonPath: .spec.parentV6ip
+        jsonPath: .spec.parentMac
       - name: Subnet
         type: string
         jsonPath: .spec.subnet
       - jsonPath: .status.ready
         name: Ready
         type: boolean
+      - jsonPath: .status.type
+        name: Type
+        type: string
       schema:
         openAPIV3Schema:
           type: object
@@ -1753,6 +1750,8 @@ spec:
             status:
               type: object
               properties:
+                type:
+                  type: string
                 ready:
                   type: boolean
                 v4ip:
@@ -1787,6 +1786,8 @@ spec:
             spec:
               type: object
               properties:
+                type:
+                  type: string
                 namespace:
                   type: string
                 subnet:
