--- a/yamls/kube-ovn-dual-stack.yaml
+++ b/yamls/kube-ovn-dual-stack.yaml
@@ -200,7 +200,7 @@ spec:
             - --alsologtostderr=true
             - --log_file=/var/log/kube-ovn/kube-ovn-cni.log
             - --log_file_max_size=0
-            - --enable-tproxy=true
+            - --enable-tproxy=false
           securityContext:
             runAsUser: 0
             privileged: true
