--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -1360,16 +1360,13 @@ jobs:
           sudo cp -r /root/.kube/ ~/.kube/
           sudo chown -R $(id -un). ~/.kube/
 
-      - name: Install Kube-OVN
+      - name: Install Kube-OVN with VPC NAT gateway enabled
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
           docker pull kubeovn/vpc-nat-gateway:$version
-          VERSION=$version make kind-install
-
-      - name: Install vpc-nat-gw
-        run: make kind-install-vpc-nat-gw
+          VERSION=$version make kind-install-vpc-nat-gw
 
       - name: Run E2E
         run: make iptables-vpc-nat-gw-conformance-e2e
