--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -21,7 +21,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GO_VERSION: '1.20.5'
+  GO_VERSION: ''
   GOSEC_VERSION: '2.16.0'
   HELM_VERSION: v3.12.2
   SUBMARINER_VERSION: '0.14.6'
