--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -10,7 +10,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GO_VERSION: '1.20.5'
+  GO_VERSION: ''
   HELM_VERSION: v3.12.2
   SUBMARINER_VERSION: '0.14.6'
 
