--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -1181,6 +1181,9 @@ spec:
       - jsonPath: .status.type
         name: Type
         type: string
+      - jsonPath: .status.nat
+        name: Nat
+        type: string
       - jsonPath: .status.ready
         name: Ready
         type: boolean
@@ -1192,6 +1195,8 @@ spec:
               type: object
               properties:
                 type:
+                  type: string
+                nat:
                   type: string
                 ready:
                   type: boolean
