--- a/.github/workflows/build-kube-ovn-base.yaml
+++ b/.github/workflows/build-kube-ovn-base.yaml
@@ -60,7 +60,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branch: [master, release-1.11, release-1.9]
+        branch:
+        - master
+        - release-1.12
+        - release-1.11
+        - release-1.9
     needs:
       - build-arm64
       - build-amd64
@@ -100,7 +104,7 @@ jobs:
           docker manifest create kubeovn/kube-ovn-base:$TAG kubeovn/kube-ovn-base:$TAG-amd64 kubeovn/kube-ovn-base:$TAG-arm64
           docker manifest push kubeovn/kube-ovn-base:$TAG
 
-          if [ "${{ matrix.branch }}" == "master" || "${{ matrix.branch }}" == "release-1.11" ]; then
+          if [ "${{ matrix.branch }}" = "master" -o "${{ matrix.branch }}" = "release-1.11" ]; then
             docker push kubeovn/kube-ovn-base:$TAG-debug-amd64
             docker push kubeovn/kube-ovn-base:$TAG-debug-arm64
             docker manifest create kubeovn/kube-ovn-base:$TAG-debug kubeovn/kube-ovn-base:$TAG-debug-amd64 kubeovn/kube-ovn-base:$TAG-debug-arm64
