--- a/yamls/ovn-ha.yaml
+++ b/yamls/ovn-ha.yaml
@@ -219,7 +219,7 @@ spec:
   updateStrategy:
     type: RollingUpdate
     rollingUpdate:
-      maxSurge: 100%
+      maxSurge: 1
       maxUnavailable: 0
   template:
     metadata:
