--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -1081,7 +1081,7 @@ jobs:
           path: kube-ovn-ic-conformance-e2e-ko-log.tar.gz
 
   chart-test:
-    name: Chart Installation Test
+    name: Chart Installation/Uninstallation Test
     needs: build-kube-ovn
     runs-on: ubuntu-22.04
     timeout-minutes: 30
